# Fractals

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sh  run.sh
src/: main.cpp
src/include/: julia_iter.hpp  utils.hpp
